# mcpbandit

./: .gitignore  pyproject.toml  readme.md
docs/examples/: sandbox.ipynb
examples/agents/: cli_chat_loop.py
examples/mcp/: casual_mcp_server.py  cli_chat_loop.py  polite_mcp_server.py
src/mcpbandit/: bandit.py  context.py
tests/: test_async_lru_cache.py  test_bandit.py  test_context.py
