[project]
name = "mcpbandit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.14.1",
    "mcp>=1.25.0",
    "numpy>=2.3.5",
    "openai>=2.14.0",
    "openai-agents>=0.6.4",
]

[project.optional-dependencies]
dev = ["ruff>=0.14.10", "pytest>=8.3.3"]

[dependency-groups]
dev = [
    "fastapi>=0.127.0",
    "jupyter>=1.1.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
